[metadata]
name = compile-env-files-MikeChurvis
version = 0.1.1
author = Mike Churvis
author_email = mikechurvis@gmail.com
description = A script that builds and distributes environment variable files from a single-source-of-truth config file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MikeChurvis/compile-env-files
license = GPL-3

[options]
package_dir =
  = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  compile-env = src.commands:compile_env_files
  make-config-template = src.commands:generate_blank_config
